fix the bug of overlay not stretching to the whole page

--- a/components/Easings/Easings.module.scss
+++ b/components/Easings/Easings.module.scss
@@ -17,16 +17,6 @@ $title-animation-timing: 400ms;
     }
 }
 
-.popup {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 200;
-    background-color: white;
-    margin-top: 0;
-}
-
 .easingContainer {
     @extend .container;
     height: 200px;
@@ -207,9 +197,20 @@ $title-animation-timing: 400ms;
     margin-top: 1rem;
 }
 
+.popup {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 200;
+    background-color: white;
+    margin-top: 0;
+}
+
 .overlay {
-    position: absolute;
+    position: fixed;
     z-index: -100;
+    height: 100%;
     inset: 0;
     background-color: rgba(0, 0, 0, 0.125);
     opacity: 0;
